sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:13: error: value fin is not a member of Unit
possible cause: maybe a semicolon is missing before `value fin'?
      } fin=fin-1
        ^AlgCocktailSort2:20: error: value debut is not a member of Unit
possible cause: maybe a semicolon is missing before `value debut'?
      }debut=debut+1
       ^